[tool.poetry]
name = "spectre-defense"
version = "0.1.0"
description = "Defending Against Backdoor Attacks Using Robust Statistics"
authors = ["Jonathan Hayase <jhayase@cs.washington.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
torchvision = "^0.8"
tqdm = "^4.49.0"
pip = "^20.2.3"
irlbpy = {git = "https://github.com/boonepeter/irlbpy", rev = "pgb"}

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
